...
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LookUpCourseButton"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/courses"
            android:background="@drawable/rounded_department"
...
