...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       <TextView
           android:id="@+id/courseNameText"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:textSize="16dp"/>

...
