...
            android:layout_marginTop="5dp">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:id="@+id/searchText"
                android:queryHint="Course Name">
            </SearchView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
...
