<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background= "@drawable/custom_home_button"
        android:id="@+id/header"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="28sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/plan">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_section"
            android:layout_marginTop="80dp">
            <TextView
                android:layout_width="80dp"
                android:text="@string/term"
                android:textSize="13sp"
                android:padding="10dp"
                android:gravity= "center_vertical"
                android:textColor="#fff"
                android:background="@drawable/custom_home_button"
                android:layout_height="50dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity= "start"
                android:id="@+id/planTermSpinner">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_section"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="80dp"
                android:text="@string/year"
                android:padding="10dp"
                android:textSize="13sp"
                android:gravity= "center_vertical"
                android:textColor="#fff"
                android:background="@drawable/custom_home_button"
                android:layout_height="50dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity= "start"
                android:id="@+id/planYearSpinner">
            </Spinner>
        </LinearLayout>

        <Button
            android:layout_width="130dp"
            android:layout_marginTop="20dp"
            android:layout_height="50dp"
            android:id="@+id/startButton"
            android:text="@string/start">
        </Button>
    </LinearLayout>
    
    
    
    
</LinearLayout>