...
            android:layout_gravity="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="buttonAddPlanOnClick"
            android:text="add"
            android:layout_marginEnd="10dp"
            android:id="@+id/planAddButton">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">
        <ListView
            android:id="@+id/semesterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:divider="#fff"
            android:dividerHeight="25dp"
            android:scrollbarFadeDuration="0"
...
