...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_filter">
            <TextView
                android:id="@+id/semesterNameText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/removeSemesterButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="90dp"
                android:height="35dp"
                android:layout_marginEnd="10dp"
                android:textSize="10sp"
...
