...
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_calendar_today_24"
            android:onClick="buttonCurrentSemesterOnClick"
            />

        <Button
            android:id="@+id/CompletedSemesterButton"
            android:layout_width = "230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/completed"
            android:background="@drawable/rounded_department"
...
            android:textAllCaps="false"
            android:drawableTop="@drawable/baseline_upcoming_24"
            android:onClick="buttonUpcomingSemestersOnClick"
            />

        <Button
            android:id="@+id/EditPlanButton"
            android:layout_width = "230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/managePlan"
            android:background="@drawable/rounded_department"
...
