...
            android:layout_gravity="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/finalize"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"
            android:id="@+id/finalizeButton">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="270dp"
...
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">

            <ListView
                android:id="@+id/availableCourseList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:divider="#fff"
                android:dividerHeight="15dp"
                android:scrollbarFadeDuration="0"
...
